--- a/lawconnect/src/App.css
+++ b/lawconnect/src/App.css
@@ -19,16 +19,19 @@ h2 {
   color: var(--LC-Dark-Blue);
   font-weight: 400;
   font-size: x-large;
-  padding-top: 2%;
+  margin-block-start: 2em;
+  margin-block-end: 2em;
 }
 
 h3 {
   color: var(--LC-Dark-Blue);
   font-weight: 600;
   font-size: x-large;
-  padding-top: 2%;
 }
 
+p {
+  font-size: small;
+}
 /* NAVBAR  */
 .navbarContainer {
   width: 100%;
@@ -46,6 +49,21 @@ h3 {
   justify-content: space-between;
   align-items: center;
   flex-wrap: nowrap;
+}
+
+@media only screen and (max-width: 1013px) {
+  .toolbar {
+    width: 100%;
+    margin-right: 10%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    flex-wrap: nowrap;
+  }
+}
+
+.fa-solid.fa-bars {
+  padding: 25px;
 }
 
 .centreNavGroup {
@@ -68,16 +86,35 @@ h3 {
   display: flex;
   flex-direction: row;
   width: 80%;
-  height: 25vh;
   margin: 0 auto;
   justify-content: space-between;
 }
 
+@media only screen and (max-width: 1013px) {
+  .contentContainer {
+    display: flex;
+    flex-direction: column-reverse;
+    width: 90%;
+    height: 100%;
+    margin: 0 auto;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+  }
+}
+
 .flex-item-1 {
   width: 50%;
-  height: 100%;
-  padding: 5%;
-  align-items: center;
+  align-self: center;
+  display: block;
+}
+
+@media only screen and (max-width: 1013px) {
+  .flex-item-1 {
+    width: 100%;
+    align-self: center;
+    display: block;
+  }
 }
 
 p.textBlock {
@@ -86,51 +123,181 @@ p.textBlock {
   width: 80%;
 }
 
+@media only screen and (max-width: 1013px) {
+  p.textBlock {
+    color: #6c6c6c ;
+    font-size: small;
+    width: 100%;
+  }
+}
+
 .textBlock {
   text-align: left;
+}
+
+.textBlock.flex-item-1 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-left: 25px;
+}
+
+.imageBlock.flex-item-1 {
+  margin-top: 30px;
+}
+
+@media only screen and (max-width: 1013px) {
+  .imageBlock.flex-item-1 {
+    width: 90%;
+  }
+  .textBlock.flex-item-1 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: 0 25px;
+  }
+}
+
+/* MAIN CONTENT ROWS */
+.light-grey-bg {
+  background-color: var(--LC-Light-Greyish-Blue);
+  height: 550px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+@media only screen and (max-width: 1013px) {
+  .light-grey-bg {
+    background-color: var(--LC-Light-Greyish-Blue);
+    height: 650px;
+    display: flex;
+    flex-direction: column-reverse;
+    justify-content: center;
+    align-items: center;
+  }
+}
+
+.white-bg{
+  background-color: #ffffff;
+  height: 550px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+@media only screen and (max-width: 1013px) {
+  .white-bg{
+    background-color: #ffffff;
+    height: 650px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+}
+
+.contentImage {
+  max-width: 85%;
+  max-height: 90%;
 }
 
 /* HERO BANNER */
 .hero-flex-item-1 {
   width: 35%;
   padding-left: 25px;
+  padding-right: 25px;
   align-self: baseline;
 }
 
+@media only screen and (max-width: 1013px) {
+  .hero-flex-item-1 {
+    width: 100%;
+    align-self: center;
+  }
+}
 .hero-flex-item-2 {
-  width: 80%;
-  padding: 5%;
-  text-align: center;
-  align-items: baseline;
+  width: 70%;
+  align-self: center;
+
 }
 
 .heroDiv {
-  background-image: linear-gradient(to top, var(--LC-Dark-Blue), var(--LC-Vivid-Blue) 85%, var(--LC-Vivid-Blue));
-  height: 400px;
+  background-image: linear-gradient(to top, var(--LC-Dark-Blue), var(--LC-Vivid-Blue) 90%, var(--LC-Vivid-Blue));
+  height: 350px;
   color: #ffffff;
   text-align: left;
   z-index: 0;
   margin-top: 75px;
+  padding-top: 5%;
   overflow: hidden;
+  justify-content: space-between;
+}
+
+@media only screen and (max-width: 1013px) {
+  .heroDiv {
+    background-image: linear-gradient(to top, var(--LC-Dark-Blue), var(--LC-Vivid-Blue) 90%, var(--LC-Vivid-Blue));
+    height: 550px;
+    color: #ffffff;
+    text-align: center;
+    z-index: 0;
+    overflow: hidden;
+    justify-content: space-between;
+  }
 }
 
 .circleDiv {
   border-radius: 50%;
-  width: 500px;
-  height: 500px;
+  width: 400px;
+  height: 400px;
   -moz-border-radius: 50%;
   -webkit-border-radius: 50%;
-  border: 75px solid var(--LC-Vivid-Blue);
+  border: 80px solid var(--LC-Vivid-Blue);
   z-index: 3;
-  box-sizing:border-box;
-  display: inline-block;
-  position: relative;
-  top: -15%;
+  display: block;
+  margin: 0 auto;
+  text-align: center;
 }
 
 .heroImage {
-  width: 400px;
+  width: 492px;
+  height: 310px;
   z-index: 2;
+  top: 80px;
+  left: -40px;
+  position: relative;
+}
+.heroImage-mobile {
+  max-width: 100%;
+  position: relative;
+  z-index: 2;
+}
+
+.heroText {
+  margin-top: 25px;
+  margin-bottom: 25px;
+}
+
+.heroContentContainer{
+  display: flex;
+  flex-direction: row;
+  width: 80%;
+  height: 25vh;
+  margin: 0 auto;
+  justify-content: space-around;
+  align-items: center;
+}
+
+@media only screen and (max-width: 1013px) {
+  .heroContentContainer{
+    display: flex;
+    flex-direction: column-reverse;
+    width: 90%;
+    height: 500px;
+    justify-content: space-evenly;
+  }
 }
 
 /* BUTTONS */
@@ -141,8 +308,23 @@ p.textBlock {
   padding: 10px 20px;
   color: #ffffff;
   font-weight: 700;
-  font-size: medium;
+  font-size: small;
   font-family: 'Nunito Sans', sans-serif;
+  margin: 0 25px 0 0;
+}
+
+@media only screen and (max-width: 1013px) {
+  .accountButton {
+    background-color: var(--LC-Sky-Blue);
+    border: none;
+    border-radius: 5px;
+    padding: 10px 20px;
+    color: #ffffff;
+    font-weight: 700;
+    font-size: small;
+    font-family: 'Nunito Sans', sans-serif;
+    margin: 0 auto;
+  }
 }
 
 .navButton {
@@ -152,7 +334,7 @@ p.textBlock {
   font-weight: 700;
   border: none;
   margin: 10px;
-  font-size: medium;
+  font-size: small;
   padding: 10px 10px;
   border-radius: 5px;
 }
@@ -170,18 +352,42 @@ button:hover {
   display: flex;
   flex-direction: row;
   justify-content: center;
-  align-items: center;
-
+  align-items: baseline;
+  height: 400px;
 }
+
+@media only screen and (max-width: 1013px) {
+  .cardContainer{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    height: 1000px;
+  }
+}
+
 .contentCard{
   border-radius: 5px;
   box-shadow: 5px 5px 10px #ededed;
   box-sizing: border-box;
   width: 250px;
   height: 300px;
-  margin: 2%;
+  margin: 0 2%;
   overflow: hidden;
   background-color: #ffffff;
+}
+
+@media only screen and (max-width: 1013px) {
+  .contentCard{
+    border-radius: 5px;
+    box-shadow: 5px 5px 10px #ededed;
+    box-sizing: border-box;
+    width: 250px;
+    height: 300px;
+    margin: 2% 0;
+    overflow: hidden;
+    background-color: #ffffff;
+  }
 }
 
 .cardImage {
@@ -206,25 +412,17 @@ p.cardText {
   padding-bottom: 5%;
 }
 
-/* MAIN CONTENT ROWS */
-.light-grey-bg {
-  background-color: var(--LC-Light-Greyish-Blue);
-  height: 400px;
-}
-
-.white-bg{
-  background-color: #ffffff;
-  height: 75vh;
-}
-
-.contentImage {
-  height: 80%;
-  margin: 0 25px 5% 0;
-}
-
 /* FOOTER */
 .footerDiv {
   height: 100px;
   background-color: var(--LC-Black);
   position: relative;
+}
+
+@media only screen and (max-width: 1013px) {
+  .footerDiv {
+    height: 100px;
+    background-color: var(--LC-Black);
+    position: relative;
+  }
 }
